--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <link rel="stylesheet" href="./css/reset.css">
         <link rel="stylesheet" href="./css/general.css">
-        <link rel="stylesheet" href="./css/framework.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
         <link rel="stylesheet" href="./css/style.css">
 
         <title>FizzBuzz</title>
@@ -35,6 +35,18 @@
         
         <!-- ! Main Start -->
         <main>
+
+            <h1 class="text-center" id="h1">
+                Fizz Buzz
+            </h1>
+
+            <h5 class="text-center" id="h5">
+                Like a Wes Anderson Movie
+            </h5>
+
+            <div id="container" class="d-flex flex-wrap flex-row">
+
+            </div>
 
         </main>
 
